<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="ok">OK</string>
    <string name="click_ok_to_play_again">Click Ok To Play Again</string>
    <string name="texticon">textIcon</string>
    <string name="play_again">Play Again</string>
    <string name="btn1">btn1</string>
    <string name="btn2">btn2</string>
    <string name="btn3">btn3</string>
    <string name="btn4">btn4</string>
    <string name="btn5">btn5</string>
    <string name="btn6">btn6</string>
    <string name="btn7">btn7</string>
    <string name="btn8">btn8</string>
    <string name="btn9">btn9</string>
    <string name="alertimage">alertImage</string>
</resources>