<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:id="@+id/textIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="60dp"
            android:visibility="gone"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/texticon">

        </ImageView>


        <TextView
            android:id="@+id/player_turn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/nunito_bold"
            android:text=""
            android:textAlignment="center"
            android:textSize="32sp" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            android:rotation="270"
            app:cardBackgroundColor="@color/extra_dark_blue"
            app:cardElevation="10dp">

        <ImageButton
            android:id="@+id/btn1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:elevation="10dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/btn1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            android:rotation="270"
            app:cardBackgroundColor="@color/extra_dark_blue"
            app:cardElevation="10dp">
        <ImageButton
            android:id="@+id/btn2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:elevation="10dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/btn2" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            android:rotation="270"
            app:cardBackgroundColor="@color/extra_dark_blue"
            app:cardElevation="10dp">
        <ImageButton
            android:id="@+id/btn3"
            android:layout_width="90dp"
            android:elevation="10dp"
            android:layout_height="90dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/btn3" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center">


        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            android:rotation="270"
            app:cardBackgroundColor="@color/extra_dark_blue"
            app:cardElevation="10dp">




        <ImageButton
            android:id="@+id/btn4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:elevation="10dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/btn4" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            android:rotation="270"
            app:cardBackgroundColor="@color/extra_dark_blue"
            app:cardElevation="10dp">
        <ImageButton
            android:id="@+id/btn5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:elevation="10dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/btn5" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            android:rotation="270"
            app:cardBackgroundColor="@color/extra_dark_blue"
            app:cardElevation="10dp">
        <ImageButton
            android:id="@+id/btn6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:elevation="10dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/btn6" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            android:rotation="270"
            app:cardBackgroundColor="@color/extra_dark_blue"
            app:cardElevation="10dp">
        <ImageButton
            android:id="@+id/btn7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:elevation="10dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/btn7" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            android:rotation="270"
            app:cardBackgroundColor="@color/extra_dark_blue"
            app:cardElevation="10dp">
        <ImageButton
            android:id="@+id/btn8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:elevation="10dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/btn8" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            android:rotation="270"
            app:cardBackgroundColor="@color/extra_dark_blue"
            app:cardElevation="10dp">
        <ImageButton
            android:id="@+id/btn9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:elevation="10dp"
            android:padding="0dp"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/btn9" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>



</LinearLayout>